refs added, refs cleaned up

--- a/glossar.bib
+++ b/glossar.bib
@@ -493,19 +493,6 @@ PMC5234466[pmcid]},
   url       = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5234466/},
 }
 
-@Article{Booth2010,
-  author    = {Booth, Andrew},
-  journal   = {Int J Technol Assess Health Care},
-  title     = {How much searching is enough? Comprehensive versus optimal retrieval for technology assessments},
-  year      = {2010},
-  number    = {4},
-  pages     = {431--435},
-  volume    = {26},
-  doi       = {10.1017/S0266462310000966},
-  file      = {:Booth2010 - How Much Searching Is Enough_ Comprehensive Versus Optimal Retrieval for Technology Assessments.pdf:PDF},
-  publisher = {Cambridge University Press},
-}
-
 @Article{Tanon2010,
   author    = {Tanon, Affaud Anaïs and Champagne, F. and Contandriopoulos, A.-P. and Pomey, M.-P. and Vadeboncoeur, A. and Nguyen, H.},
   journal   = {BMJ Quality \& Safety},
@@ -602,17 +589,6 @@ PMC5234466[pmcid]},
   file      = {:Belter2016 - Citation Analysis As a Literature Search Method for Systematic Reviews.pdf:PDF},
   keywords  = {bibliometrics, information retrieval},
   publisher = {John Wiley & Sons, Ltd},
-}
-
-@Article{Hirt2020,
-  author  = {Hirt, J. and Nordhausen, T. and Appenzeller-Herzog, C. and Ewald, H.},
-  journal = {F1000Res},
-  title   = {Using citation tracking for systematic literature searching - study protocol for a scoping review of methodological studies and an expert survey},
-  year    = {2020},
-  number  = {1386},
-  volume  = {9},
-  doi     = {10.12688/f1000research.27337.1},
-  file    = {:Hirt2020 - Using Citation Tracking for Systematic Literature Searching Study Protocol for a Scoping Review of Methodological Studies and an Expert Survey.pdf:PDF},
 }
 
 @Article{Glanville2008,
@@ -1070,51 +1046,6 @@ PMC4076126[pmcid]},
   language  = {eng},
   publisher = {Medical Library Association},
   url       = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4076126/},
-}
-
-@Article{FineoutOverholt2010,
-  author   = {Fineout-Overholt, Ellen and Melnyk, Bernadette Mazurek and Stillwell, Susan B. and Williamson, Kathleen M.},
-  journal  = {Am J Nurs},
-  title    = {{Evidence-Based Practice, Step by Step: Critical Appraisal of the Evidence: Part III}},
-  year     = {2010},
-  issn     = {0002-936X},
-  number   = {11},
-  volume   = {110},
-  abstract = {The process of synthesis: seeing similarities and differences across the body of evidence.},
-  doi      = {10.1097/01.NAJ.0000390523.99066.b5},
-  file     = {:FineoutOverholt2010 - Evidence Based Practice, Step by Step_ Critical Appraisal of the Evidence Part III.pdf:PDF},
-  refid    = {00000446-201011000-00027},
-  url      = {https://journals.lww.com/ajnonline/Fulltext/2010/11000/Evidence_Based_Practice,_Step_by_Step__Critical.27.aspx},
-}
-
-@Article{FineoutOverholt2010a,
-  author   = {Fineout-Overholt, Ellen and Melnyk, Bernadette Mazurek and Stillwell, Susan B. and Williamson, Kathleen M.},
-  journal  = {Am J Nurs},
-  title    = {{Evidence-Based Practice, Step by Step: Critical Appraisal of the Evidence: Part II}},
-  year     = {2010},
-  issn     = {0002-936X},
-  number   = {9},
-  volume   = {110},
-  abstract = {This is the sixth article in a series from the Arizona State University College of Nursing and Health Innovation's Center for the Advancement of Evidence-Based Practice. Evidence-based practice (EBP) is a problem-solving approach to the delivery of health care that integrates the best evidence from studies and patient care data with clinician expertise and patient preferences and values. When delivered in a context of caring and in a supportive organizational culture, the highest quality of care and best patient outcomes can be achieved.},
-  doi      = {10.1097/01.NAJ.0000388264.49427.f9},
-  file     = {:FineoutOverholt2010a - Evidence Based Practice, Step by Step_ Critical Appraisal of the Evidence_ Part II_ Digging Deeper Examining the _keeper_ Studies..pdf:PDF},
-  refid    = {00000446-201009000-00024},
-  url      = {https://journals.lww.com/ajnonline/Fulltext/2010/09000/Evidence_Based_Practice,_Step_by_Step__Critical.24.aspx},
-}
-
-@Article{FineoutOverholt2010b,
-  author   = {Fineout-Overholt, Ellen and Melnyk, Bernadette Mazurek and Stillwell, Susan B. and Williamson, Kathleen M.},
-  journal  = {Am J Nurs},
-  title    = {{Evidence-Based Practice Step by Step: Critical Appraisal of the Evidence: Part I}},
-  year     = {2010},
-  issn     = {0002-936X},
-  number   = {7},
-  volume   = {110},
-  abstract = {This is the fifth article in a series from the Arizona State University College of Nursing and Health Innovation's Center for the Advancement of Evidence-Based Practice. Evidence-based practice (EBP) is a problem-solving approach to the delivery of health care that integrates the best evidence from studies and patient care data with clinician expertise and patient preferences and values. When delivered in a context of caring and in a supportive organizational culture, the highest quality of care and best patient outcomes can be achieved.},
-  doi      = {10.1097/01.NAJ.0000383935.22721.9c},
-  file     = {:FineoutOverholt2010b - Evidence Based Practice Step by Step_ Critical Appraisal of the Evidence_ Part I.pdf:PDF},
-  refid    = {00000446-201007000-00026},
-  url      = {https://journals.lww.com/ajnonline/Fulltext/2010/07000/Evidence_Based_Practice_Step_by_Step__Critical.26.aspx},
 }
 
 @Article{Stillwell2010a,
@@ -1823,30 +1754,6 @@ PMC3041277[pmcid]},
   publisher = {John Wiley & Sons, Ltd},
 }
 
-@Article{Hirt2021,
-  author  = {Julian Hirt and Thomas Nordhausen and Christian Appenzeller-Herzog and Hannah Ewald},
-  journal = {F1000Res},
-  title   = {{Using citation tracking for systematic literature searching --~study protocol for a scoping review of methodological studies and a Delphi study}},
-  year    = {2021},
-  month   = sep,
-  pages   = {1386},
-  volume  = {9},
-  doi     = {10.12688/f1000research.27337.3},
-  file    = {:Hirt2021 - Using Citation Tracking for Systematic Literature Searching ~study Protocol for a Scoping Review of Methodological Studies and a Delphi Study.pdf:PDF},
-}
-
-@InCollection{McKenzie2022,
-  author    = {McKenzie, J. E. and Brennan, S. E. and Ryan, R. E. and Thomson, H. J. and Johnston, R. V. and Thomas, J.},
-  booktitle = {Cochrane Handbook for Systematic Reviews of Interventions},
-  publisher = {Cochrane},
-  title     = {Chapter 3: Defining the criteria for including studies and how they will be grouped for the synthesis.},
-  year      = {2022},
-  editor    = {Higgins, J. P. T. and Thomas, J. and Chandler, J. and Cumpston, M. and Li, T. and Page, M. J. and Welch, V. A.},
-  month     = feb,
-  eprint    = {https://training.cochrane.org/handbook/current/chapter-03},
-  file      = {:McKenzie2022 - Chapter 3_ Defining the Criteria for Including Studies and How They Will Be Grouped for the Synthesis..pdf:PDF},
-}
-
 @Article{Murad2016,
   author    = {Murad, M. Hassan and Asi, Noor and Alsawas, Mouaz and Alahdab, Fares},
   journal   = {BMJ Evid Based Med},
@@ -2079,21 +1986,6 @@ PMC7856136[pmcid]},
   month     = jan,
   doi       = {10.1002/9780470754887},
   file      = {:Petticrew2006 - Systematic Reviews in the Social Sciences.pdf:PDF},
-}
-
-@Article{Cooper2018,
-  author   = {Cooper, Chris and Booth, Andrew and Varley-Campbell, Jo and Britten, Nicky and Garside, Ruth},
-  journal  = {BMC Med Res Methodol},
-  title    = {Defining the process to literature searching in systematic reviews: a literature review of guidance and supporting studies},
-  year     = {2018},
-  issn     = {1471-2288},
-  number   = {1},
-  pages    = {85},
-  volume   = {18},
-  abstract = {Systematic literature searching is recognised as a critical component of the systematic review process. It involves a systematic search for studies and aims for a transparent report of study identification, leaving readers clear about what was done to identify studies, and how the findings of the review are situated in the relevant evidence.},
-  doi      = {10.1186/s12874-018-0545-3},
-  file     = {:Cooper2018 - Defining the Process to Literature Searching in Systematic Reviews_ a Literature Review of Guidance and Supporting Studies.pdf:PDF},
-  refid    = {Cooper2018},
 }
 
 @Book{Noble2018,
@@ -3531,7 +3423,7 @@ Rapid reviews have many names and approaches, and some methods might be more des
   volume   = {3},
   abstract = {Systematic reviews, a cornerstone of evidence-based medicine, are not produced quickly enough to support clinical practice. The cost of production, availability of the requisite expertise and timeliness are often quoted as major contributors for the delay. This detailed survey of the state of the art of information systems designed to support or automate individual tasks in the systematic review, and in particular systematic reviews of randomized controlled clinical trials, reveals trends that see the convergence of several parallel research projects.},
   doi      = {10.1186/2046-4053-3-74},
-  file     = {:Tsafnat2014 - Systematic Review Automation Technologies.pdf:PDF},
+  file     = {:Tsafnat2014 - Systematic Review Automation Technologies.pdf:PDF;:Tsafnat2014 - Systematic Review Automation Technologies.tif:tif},
   refid    = {Tsafnat2014},
   url      = {https://doi.org/10.1186/2046-4053-3-74},
 }
@@ -3670,7 +3562,7 @@ A summary at the beginning provides an overview of the main findings in the form
   editor    = {Butler-Henderson, Kerryn and Day, Karen and Gray, Kathleen},
   pages     = {295--307},
   publisher = {Springer International Publishing},
-  title     = {Working as a Health Research Information Specialist},
+  title     = {{Working as a Health Research Information Specialist}},
   year      = {2021},
   address   = {Cham},
   isbn      = {978-3-030-81850-0},
@@ -4273,21 +4165,9 @@ Vor der Auswahl der relevanten Studien im Screening-Prozess sollten die Dublette
   url       = {https://ebm.bmj.com/content/28/6/359},
 }
 
-@InCollection{McKenzie2023,
-  author    = {McKenzie, J. E. and Brennan, S. E. and Ryan, R. E. and Thomson, H. J. and Johnston, R. V. and Thomas, J.},
-  booktitle = {Cochrane Handbook for Systematic Reviews of Interventions},
-  publisher = {Cochrane},
-  title     = {Chapter 3: Defining the criteria for including studies and how they will be grouped for the synthesis.},
-  year      = {2023},
-  edition   = {6.4},
-  editor    = {Higgins, J. P. T. and Thomas, J. and Chandler, J. and Cumpston, M. and Li, T. and Page, M. J. and Welch, V. A.},
-  month     = aug,
-  eprint    = {https://training.cochrane.org/handbook/current/chapter-03},
-}
-
 @Article{Kapp2024,
   author   = {Kapp, Claudia and Fujita-Rohwerder, Naomi and Lilienthal, Jona and Sieben, Wiebke and Waffenschmidt, Siw and Hausner, Elke},
-  journal  = {Cochrane Evidence Synthesis and Methods},
+  journal  = {Cochrane Ev Synth},
   title    = {{The searchbuildR shiny app: A new implementation of the objective approach for search strategy development in systematic reviews}},
   year     = {2024},
   number   = {6},
@@ -4370,20 +4250,19 @@ Sci Data. 2019 Mar 19;6(1):6. doi: 10.1038/s41597-019-0009-6. PMID: 30890711},
 
 @Article{Bramer2017a,
   author                 = {Bramer, Wichor M. and Rethlefsen, Melissa L. and Kleijnen, Jos and Franco, Oscar H.},
-  journal                = {Systematic reviews},
+  journal                = {Syst Rev},
   title                  = {Optimal database combinations for literature searches in systematic reviews: a prospective exploratory study.},
   year                   = {2017},
   month                  = {Dec},
   pages                  = {245},
   volume                 = {6},
-  electronic-issn        = {2046-4053},
-  linking-issn           = {2046-4053},
   abstract               = {BACKGROUND: Within systematic reviews, when searching for relevant references, it is advisable to use multiple databases. However, searching databases is laborious and time-consuming, as syntax of search strategies are database specific. We aimed to determine the optimal combination of databases needed to conduct efficient searches in systematic reviews and whether the current practice in published reviews is appropriate. While previous studies determined the coverage of databases, we analyzed the actual retrieval from the original searches for systematic reviews. METHODS: Since May 2013, the first author prospectively recorded results from systematic review searches that he performed at his institution. PubMed was used to identify systematic reviews published using our search strategy results. For each published systematic review, we extracted the references of the included studies. Using the prospectively recorded results and the studies included in the publications, we calculated recall, precision, and number needed to read for single databases and databases in combination. We assessed the frequency at which databases and combinations would achieve varying levels of recall (i.e., 95%). For a sample of 200 recently published systematic reviews, we calculated how many had used enough databases to ensure 95% recall. RESULTS: A total of 58 published systematic reviews were included, totaling 1746 relevant references identified by our database searches, while 84 included references had been retrieved by other search methods. Sixteen percent of the included references (291 articles) were only found in a single database; Embase produced the most unique references (n = 132). The combination of Embase, MEDLINE, Web of Science Core Collection, and Google Scholar performed best, achieving an overall recall of 98.3 and 100% recall in 72% of systematic reviews. We estimate that 60% of published systematic reviews do not retrieve 95% of all available relevant references as many fail to search important databases. Other specialized databases, such as CINAHL or PsycINFO, add unique references to some reviews where the topic of the review is related to the focus of the database. CONCLUSIONS: Optimal searches in systematic reviews should search at least Embase, MEDLINE, Web of Science, and Google Scholar as a minimum requirement to guarantee adequate and efficient coverage.},
   address                = {England},
   article-doi            = {10.1186/s13643-017-0644-y},
   article-pii            = {644},
   completed              = {20180725},
   doi                    = {10.1186/s13643-017-0644-y},
+  electronic-issn        = {2046-4053},
   electronic-publication = {20171206},
   file                   = {:Bramer2017a - Optimal Database Combinations for Literature Searches in Systematic Reviews_ a Prospective Exploratory Study..pdf:PDF},
   grantno                = {UL1TR001067/National Center for Advancing Translational Sciences/},
@@ -4391,6 +4270,7 @@ Sci Data. 2019 Mar 19;6(1):6. doi: 10.1038/s41597-019-0009-6. PMID: 30890711},
   issue                  = {1},
   keywords               = {Databases, Bibliographic/*standards, Humans, Information Storage and Retrieval/*standards, Prospective Studies, *Review Literature as Topic, Databases, bibliographic, Information storage and retrieval, Review literature as topic, Sensitivity and specificity},
   language               = {eng},
+  linking-issn           = {2046-4053},
   location-id            = {245},
   nlm-unique-id          = {101580575},
   owner                  = {NLM},
@@ -4405,7 +4285,7 @@ Sci Data. 2019 Mar 19;6(1):6. doi: 10.1038/s41597-019-0009-6. PMID: 30890711},
 
 @Article{Hoffecker2020,
   author    = {Hoffecker, Lilian},
-  journal   = {The Serials Librarian},
+  journal   = {Ser Libr},
   title     = {{Grey Literature Searching for Systematic Reviews in the Health Sciences}},
   year      = {2020},
   issn      = {0361-526X},
@@ -4598,6 +4478,195 @@ Sci Data. 2019 Mar 19;6(1):6. doi: 10.1038/s41597-019-0009-6. PMID: 30890711},
   status                 = {PubMed-not-MEDLINE},
   termowner              = {NOTNLM},
   title-abbreviation     = {BMJ Glob Health},
+}
+
+@Article{Boeker2013,
+  author                 = {Boeker, Martin and Vach, Werner and Motschall, Edith},
+  journal                = {BMC Med Res Methodol},
+  title                  = {{Google Scholar as replacement for systematic literature searches: good relative recall and precision are not enough.}},
+  year                   = {2013},
+  month                  = oct,
+  pages                  = {131},
+  volume                 = {13},
+  electronic-issn        = {1471-2288},
+  linking-issn           = {1471-2288},
+  abstract               = {BACKGROUND: Recent research indicates a high recall in Google Scholar searches for systematic reviews. These reports raised high expectations of Google Scholar as a unified and easy to use search interface. However, studies on the coverage of Google Scholar rarely used the search interface in a realistic approach but instead merely checked for the existence of gold standard references. In addition, the severe limitations of the Google Search interface must be taken into consideration when comparing with professional literature retrieval tools.The objectives of this work are to measure the relative recall and precision of searches with Google Scholar under conditions which are derived from structured search procedures conventional in scientific literature retrieval; and to provide an overview of current advantages and disadvantages of the Google Scholar search interface in scientific literature retrieval. METHODS: General and MEDLINE-specific search strategies were retrieved from 14 Cochrane systematic reviews. Cochrane systematic review search strategies were translated to Google Scholar search expression as good as possible under consideration of the original search semantics. The references of the included studies from the Cochrane reviews were checked for their inclusion in the result sets of the Google Scholar searches. Relative recall and precision were calculated. RESULTS: We investigated Cochrane reviews with a number of included references between 11 and 70 with a total of 396 references. The Google Scholar searches resulted in sets between 4,320 and 67,800 and a total of 291,190 hits. The relative recall of the Google Scholar searches had a minimum of 76.2% and a maximum of 100% (7 searches). The precision of the Google Scholar searches had a minimum of 0.05% and a maximum of 0.92%. The overall relative recall for all searches was 92.9%, the overall precision was 0.13%. CONCLUSION: The reported relative recall must be interpreted with care. It is a quality indicator of Google Scholar confined to an experimental setting which is unavailable in systematic retrieval due to the severe limitations of the Google Scholar search interface. Currently, Google Scholar does not provide necessary elements for systematic scientific literature retrieval such as tools for incremental query optimization, export of a large number of references, a visual search builder or a history function. Google Scholar is not ready as a professional searching tool for tasks where structured retrieval methodology is necessary.},
+  address                = {England},
+  article-doi            = {10.1186/1471-2288-13-131},
+  article-pii            = {1471-2288-13-131},
+  completed              = {20140324},
+  doi                    = {10.1186/1471-2288-13-131},
+  electronic-publication = {20131026},
+  file                   = {:Boeker2013 - Google Scholar As Replacement for Systematic Literature Searches_ Good Relative Recall and Precision Are Not Enough..pdf:PDF:https\://bmcmedresmethodol.biomedcentral.com/counter/pdf/10.1186/1471-2288-13-131},
+  history                = {2013/10/26 00:00 [pmc-release]},
+  keywords               = {Abstracting and Indexing, Algorithms, Data Mining/methods, Humans, Internet, MEDLINE, Review Literature as Topic, Search Engine/*standards},
+  language               = {eng},
+  location-id            = {10.1186/1471-2288-13-131 [doi]},
+  nlm-unique-id          = {100968545},
+  owner                  = {NLM},
+  publication-status     = {epublish},
+  revised                = {20240331},
+  source                 = {BMC Med Res Methodol. 2013 Oct 26;13:131. doi: 10.1186/1471-2288-13-131.},
+  status                 = {MEDLINE},
+  subset                 = {IM},
+  title-abbreviation     = {BMC Med Res Methodol},
+}
+
+@Article{MiakeLye2025,
+  author                 = {Miake-Lye, Isomi M. and Mak, Selene and Begashaw, Meron M. and Shekelle, Paul G.},
+  journal                = {Syst Rev},
+  title                  = {{Using Google to search for evidence: how much is enough? One center's experience.}},
+  year                   = {2025},
+  month                  = apr,
+  pages                  = {92},
+  volume                 = {14},
+  electronic-issn        = {2046-4053},
+  linking-issn           = {2046-4053},
+  abstract               = {The rise of powerful search engines (e.g., Google) make the searching for gray literature more feasible within the time and resources of a typical systematic review. However, there are no hypothesis-testing studies to guide us on how to conduct such a search. It is our belief that the "best practices" for incorporating Google searches might come from the collection of experiential evidence that users have had, from which can be drawn some tentative conclusions. It is our intention with this communication to relay our experience with Google searches for five projects and the lessons we think we have learned. We invite our systematic review colleagues to contribute their own experiences and thus to build up the experiential evidence about when and how to use Google as a search engine to supplement traditional computerized database searches.},
+  address                = {England},
+  article-doi            = {10.1186/s13643-025-02836-w},
+  article-pii            = {2836},
+  completed              = {20250423},
+  doi                    = {10.1186/s13643-025-02836-w},
+  electronic-publication = {20250422},
+  file                   = {:MiakeLye2025 - Using Google to Search for Evidence_ How Much Is Enough_ One Center's Experience..pdf:PDF:https\://systematicreviewsjournal.biomedcentral.com/counter/pdf/10.1186/s13643-025-02836-w},
+  history                = {2025/04/22 00:00 [pmc-release]},
+  issue                  = {1},
+  keywords               = {*Search Engine, Humans, *Internet, *Information Storage and Retrieval/methods},
+  language               = {eng},
+  location-id            = {92},
+  nlm-unique-id          = {101580575},
+  owner                  = {NLM},
+  publication-status     = {epublish},
+  revised                = {20250425},
+  source                 = {Syst Rev. 2025 Apr 22;14(1):92. doi: 10.1186/s13643-025-02836-w.},
+  status                 = {MEDLINE},
+  subset                 = {IM},
+  title-abbreviation     = {Syst Rev},
+}
+
+@Article{Hirt2020,
+  author  = {Hirt, J. and Nordhausen, T. and Appenzeller-Herzog, C. and Ewald, H.},
+  journal = {F1000Res},
+  title   = {Using citation tracking for systematic literature searching - study protocol for a scoping review of methodological studies and an expert survey},
+  year    = {2020},
+  number  = {1386},
+  volume  = {9},
+  doi     = {10.12688/f1000research.27337.1},
+  file    = {:Hirt2020 - Using Citation Tracking for Systematic Literature Searching Study Protocol for a Scoping Review of Methodological Studies and an Expert Survey.pdf:PDF},
+}
+
+@InCollection{McKenzie2022,
+  author    = {McKenzie, J. E. and Brennan, S. E. and Ryan, R. E. and Thomson, H. J. and Johnston, R. V. and Thomas, J.},
+  booktitle = {Cochrane Handbook for Systematic Reviews of Interventions},
+  publisher = {Cochrane},
+  title     = {Chapter 3: Defining the criteria for including studies and how they will be grouped for the synthesis.},
+  year      = {2022},
+  editor    = {Higgins, J. P. T. and Thomas, J. and Chandler, J. and Cumpston, M. and Li, T. and Page, M. J. and Welch, V. A.},
+  month     = feb,
+  eprint    = {https://training.cochrane.org/handbook/current/chapter-03},
+  file      = {:McKenzie2022 - Chapter 3_ Defining the Criteria for Including Studies and How They Will Be Grouped for the Synthesis..pdf:PDF},
+}
+
+@Article{Booth2010,
+  author                 = {Booth, Andrew},
+  journal                = {Int J Technol Assess Health Care},
+  title                  = {How much searching is enough? Comprehensive versus optimal retrieval for technology assessments},
+  year                   = {2010},
+  month                  = {Oct},
+  number                 = {4},
+  pages                  = {431--435},
+  volume                 = {26},
+  electronic-issn        = {1471-6348},
+  linking-issn           = {0266-4623},
+  abstract               = {OBJECTIVES: The aim of this study is to review briefly different methods for determining the optimal retrieval of studies for inclusion in a health technology assessment (HTA) report. METHODS: This study reviews the methodology literature related to specific methods for evaluating yield from literature searching strategies and for deciding whether to continue or desist in the searching process. RESULTS: Eight different methods were identified. These include using the Capture-recapture technique; obtaining Feedback from the commissioner of the HTA report; seeking the Disconfirming case; undertaking comparison against a known Gold standard; evaluating retrieval of Known items; recognizing the Law of diminishing returns, specifying a priori Stopping rules, and identifying a point of Theoretical saturation. CONCLUSIONS: While this study identified a variety of possible methods, there has been very little formal evaluation of the specific strengths and weaknesses of the different techniques. The author proposes an evaluation agenda drawing on an examination of existing data together with exploration of the specific impact of missing relevant studies.},
+  address                = {England},
+  article-doi            = {10.1017/S0266462310000966},
+  article-pii            = {S0266462310000966},
+  completed              = {20110216},
+  doi                    = {10.1017/S0266462310000966},
+  electronic-publication = {20101006},
+  file                   = {:Booth2010 - How Much Searching Is Enough_ Comprehensive Versus Optimal Retrieval for Technology Assessments.pdf:PDF},
+  history                = {2011/02/17 06:00 [medline]},
+  issue                  = {4},
+  keywords               = {Information Storage and Retrieval/methods/*standards, *Technology Assessment, Biomedical},
+  language               = {eng},
+  location-id            = {10.1017/S0266462310000966 [doi]},
+  nlm-unique-id          = {8508113},
+  owner                  = {NLM},
+  publication-status     = {ppublish},
+  publisher              = {Cambridge University Press},
+  revised                = {20220331},
+  source                 = {Int J Technol Assess Health Care. 2010 Oct;26(4):431-5. doi: 10.1017/S0266462310000966. Epub 2010 Oct 6.},
+  status                 = {MEDLINE},
+  subset                 = {IM},
+  title-abbreviation     = {Int J Technol Assess Health Care},
+}
+
+@Article{FineoutOverholt2010b,
+  author   = {Fineout-Overholt, Ellen and Melnyk, Bernadette Mazurek and Stillwell, Susan B. and Williamson, Kathleen M.},
+  journal  = {Am J Nurs},
+  title    = {{Evidence-Based Practice Step by Step: Critical Appraisal of the Evidence: Part I}},
+  year     = {2010},
+  issn     = {0002-936X},
+  number   = {7},
+  volume   = {110},
+  abstract = {This is the fifth article in a series from the Arizona State University College of Nursing and Health Innovation's Center for the Advancement of Evidence-Based Practice. Evidence-based practice (EBP) is a problem-solving approach to the delivery of health care that integrates the best evidence from studies and patient care data with clinician expertise and patient preferences and values. When delivered in a context of caring and in a supportive organizational culture, the highest quality of care and best patient outcomes can be achieved.},
+  doi      = {10.1097/01.NAJ.0000383935.22721.9c},
+  file     = {:FineoutOverholt2010b - Evidence Based Practice Step by Step_ Critical Appraisal of the Evidence_ Part I.pdf:PDF},
+  refid    = {00000446-201007000-00026},
+  url      = {https://journals.lww.com/ajnonline/Fulltext/2010/07000/Evidence_Based_Practice_Step_by_Step__Critical.26.aspx},
+}
+
+@Article{Cooper2018,
+  author                 = {Cooper, Chris and Booth, Andrew and Varley-Campbell, Jo and Britten, Nicky and Garside, Ruth},
+  journal                = {BMC Med Res Methodol},
+  title                  = {Defining the process to literature searching in systematic reviews: a literature review of guidance and supporting studies},
+  year                   = {2018},
+  issn                   = {1471-2288},
+  month                  = {Aug},
+  number                 = {1},
+  pages                  = {85},
+  volume                 = {18},
+  electronic-issn        = {1471-2288},
+  linking-issn           = {1471-2288},
+  abstract               = {BACKGROUND: Systematic literature searching is recognised as a critical component of the systematic review process. It involves a systematic search for studies and aims for a transparent report of study identification, leaving readers clear about what was done to identify studies, and how the findings of the review are situated in the relevant evidence. Information specialists and review teams appear to work from a shared and tacit model of the literature search process. How this tacit model has developed and evolved is unclear, and it has not been explicitly examined before. The purpose of this review is to determine if a shared model of the literature searching process can be detected across systematic review guidance documents and, if so, how this process is reported in the guidance and supported by published studies. METHOD: A literature review. Two types of literature were reviewed: guidance and published studies. Nine guidance documents were identified, including: The Cochrane and Campbell Handbooks. Published studies were identified through 'pearl growing', citation chasing, a search of PubMed using the systematic review methods filter, and the authors' topic knowledge. The relevant sections within each guidance document were then read and re-read, with the aim of determining key methodological stages. Methodological stages were identified and defined. This data was reviewed to identify agreements and areas of unique guidance between guidance documents. Consensus across multiple guidance documents was used to inform selection of 'key stages' in the process of literature searching. RESULTS: Eight key stages were determined relating specifically to literature searching in systematic reviews. They were: who should literature search, aims and purpose of literature searching, preparation, the search strategy, searching databases, supplementary searching, managing references and reporting the search process. CONCLUSIONS: Eight key stages to the process of literature searching in systematic reviews were identified. These key stages are consistently reported in the nine guidance documents, suggesting consensus on the key stages of literature searching, and therefore the process of literature searching as a whole, in systematic reviews. Further research to determine the suitability of using the same process of literature searching for all types of systematic review is indicated.},
+  address                = {England},
+  article-doi            = {10.1186/s12874-018-0545-3},
+  article-pii            = {545},
+  completed              = {20190805},
+  doi                    = {10.1186/s12874-018-0545-3},
+  electronic-publication = {20180814},
+  file                   = {:Cooper2018 - Defining the Process to Literature Searching in Systematic Reviews_ a Literature Review of Guidance and Supporting Studies.pdf:PDF},
+  grantno                = {16/54/11/Department of Health/United Kingdom},
+  history                = {2018/08/14 00:00 [pmc-release]},
+  issue                  = {1},
+  keywords               = {Databases, Bibliographic/classification/standards/*statistics & numerical data, Guidelines as Topic/standards, Humans, Information Storage and Retrieval/methods/standards/*statistics & numerical data, Review Literature as Topic, *Systematic Reviews as Topic},
+  language               = {eng},
+  location-id            = {85},
+  nlm-unique-id          = {100968545},
+  owner                  = {NLM},
+  publication-status     = {epublish},
+  refid                  = {Cooper2018},
+  revised                = {20241111},
+  source                 = {BMC Med Res Methodol. 2018 Aug 14;18(1):85. doi: 10.1186/s12874-018-0545-3.},
+  status                 = {MEDLINE},
+  title-abbreviation     = {BMC Med Res Methodol},
+}
+
+@Article{FineoutOverholt2010,
+  author   = {Fineout-Overholt, Ellen and Melnyk, Bernadette Mazurek and Stillwell, Susan B. and Williamson, Kathleen M.},
+  journal  = {Am J Nurs},
+  title    = {{Evidence-Based Practice, Step by Step: Critical Appraisal of the Evidence: Part III}},
+  year     = {2010},
+  issn     = {0002-936X},
+  number   = {11},
+  volume   = {110},
+  abstract = {The process of synthesis: seeing similarities and differences across the body of evidence.},
+  doi      = {10.1097/01.NAJ.0000390523.99066.b5},
+  file     = {:FineoutOverholt2010 - Evidence Based Practice, Step by Step_ Critical Appraisal of the Evidence Part III.pdf:PDF},
+  refid    = {00000446-201011000-00027},
+  url      = {https://journals.lww.com/ajnonline/Fulltext/2010/11000/Evidence_Based_Practice,_Step_by_Step__Critical.27.aspx},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
