--- a/glossar.bib
+++ b/glossar.bib
@@ -4661,14 +4661,17 @@ Sci Data. 2019 Mar 19;6(1):6. doi: 10.1038/s41597-019-0009-6. PMID: 30890711},
   title    = {{Evidence-Based Practice, Step by Step: Critical Appraisal of the Evidence: Part III}},
   year     = {2010},
   issn     = {0002-936X},
+  month    = nov,
   number   = {11},
+  pages    = {43--51},
   volume   = {110},
   abstract = {The process of synthesis: seeing similarities and differences across the body of evidence.},
   doi      = {10.1097/01.NAJ.0000390523.99066.b5},
   file     = {:FineoutOverholt2010 - Evidence Based Practice, Step by Step_ Critical Appraisal of the Evidence Part III.pdf:PDF},
   refid    = {00000446-201011000-00027},
   url      = {https://journals.lww.com/ajnonline/Fulltext/2010/11000/Evidence_Based_Practice,_Step_by_Step__Critical.27.aspx},
-=======
+}
+
 @Article{Bethel2021,
   author             = {Bethel, Alison C. and Rogers, Morwenna and Abbott, Rebecca},
   journal            = {J Med Libr Assoc},
@@ -4700,7 +4703,6 @@ Sci Data. 2019 Mar 19;6(1):6. doi: 10.1038/s41597-019-0009-6. PMID: 30890711},
   status             = {MEDLINE},
   subset             = {IM},
   title-abbreviation = {J Med Libr Assoc},
->>>>>>> 1a005f1c73db8895dfb1b3458a120ede3f225bc3
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
